--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,10 +28,17 @@ jobs:
         pyinstaller --onefile --noconsole --name ScreenToImageKit screen-to-imagekit.py
     
     - name: Generate changelog
-      id: changelog
-      uses: metcalfc/changelog-generator@v4.0.1
+      id: github_release
+      uses: mikepenz/release-changelog-builder-action@v4
       with:
-        myToken: ${{ secrets.GITHUB_TOKEN }}
+        configuration: |
+          {
+            "template": "#{{CHANGELOG}}\n\n## Installation\n1. Download the ScreenToImageKit.exe file\n2. Run the executable\n3. Configure your ImageKit credentials on first run\n\n## Requirements\n- Windows OS\n- ImageKit account with valid credentials",
+            "pr_template": "- ${{TITLE}} (#${{NUMBER}})",
+            "empty_template": "- No changes"
+          }
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Create Release
       id: create_release
@@ -42,20 +49,7 @@ jobs:
         files: |
           dist/ScreenToImageKit.exe
         name: Release ${{ github.ref_name }}
-        body: |
-          # ScreenToImageKit ${{ github.ref_name }}
-          
-          ## What's Changed
-          ${{ steps.changelog.outputs.changelog }}
-          
-          ## Installation
-          1. Download the ScreenToImageKit.exe file
-          2. Run the executable
-          3. Configure your ImageKit credentials on first run
-          
-          ## Requirements
-          - Windows OS
-          - ImageKit account with valid credentials
+        body: ${{steps.github_release.outputs.changelog}}
         draft: false
         prerelease: false
 
