--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -34,7 +34,7 @@ jobs:
         configuration: |
           {
             "template": "#{{CHANGELOG}}\n\n## Installation\n1. Download the ScreenToImageKit.exe file\n2. Run the executable\n3. Configure your ImageKit credentials on first run\n\n## Requirements\n- Windows OS\n- ImageKit account with valid credentials",
-            "pr_template": "- ${{TITLE}} (#${{NUMBER}})",
+            "pr_template": "- ${{github.event.pull_request.title}} (#${{NUMBER}})",
             "empty_template": "- No changes"
           }
       env:
