--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PRIVATE_KEY=paste_your_imageKit_private_key_here
 PUBLIC_KEY=paste_your_imageKit_public_key_here
 URL_ENDPOINT=paste_your_imageKit_url_endpoint_here
+GEMINI_API_KEY=paste_your_gemini_api_key_here
